--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 hello world
+<!doctype html>
+<html>
+  <head>
+    <title> Alexi Lopez website</title>
+  </head>
+  <body>
+    [ I am currently a CSE undergrade student and the University at Buffalo]
+  </body>
+</html>
